--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
 
           <!-- card-2  -->
           <div class="bg-[#102861] lg:flex-1 rounded-lg pl-2  lg:pr-2">
-            <div  class="flex justify-around items-center">
-              <div class="text-left space-y-2 lg:space-y-8 lg:pt-6"> 
+            <div  class="flex justify-around items-center ">
+              <div class="text-left space-y-0 mb-3 lg:mb-none lg:space-y-7 lg:pt-6"> 
                 <img  src="Assignment_03_Category_0002/c2-assets/india-gate-logo.png" alt="">
 
             <a class="btn text-16 lg:text-xl bg-[#2A4D97] text-[#FFFFFF] rounded-lg border-none px-5 lg:px-6">World’s No.1 Rice</a>
@@ -398,7 +398,7 @@
       </section>
       <!-- section-absolute  -->
       <section>
-        <div class="bg-[#EFEBE3] rounded-lg container mx-auto absolute top-[6500px] lg:left-44 lg:top-[4050px] w-11/12 left-4 lg:w-full h-auto lg:ml-3">
+        <div class="bg-[#EFEBE3] rounded-lg container mx-auto absolute top-[6460px] lg:left-44 lg:top-[4050px] w-11/12 left-4 lg:w-full h-auto lg:ml-3">
           <div class=" py-10 lg:flex justify-around items-center px-4 lg:px-none">
             <div>
               <img src="Assignment_03_Category_0002/c2-assets/vegetable-busket.png" alt="">
